# FmAssemblyGraph

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: assembly_graph.rs  main.rs  program_args.rs
test/data/: concatenated.fastq
