[package]
name = "fm_assembly_graph"
version = "0.0.1"
description = " Generates an assembly graph from an input fastq file using an fm-index to generate De Bruijn graph with edges containing weights and kmer labels."
license = "BSD-3-Clause"
homepage = "https://github.com/UM-Applied-Algorithms-Lab/FmAssemblyGraph"
repository = "https://github.com/UM-Applied-Algorithms-Lab/FmAssemblyGraph"
readme= "README.md"
keywords = ["sequence assembly", "assembly graphs", "bioinformatics", "FASTA_FASTQ"]
categories = ["command-line-utilities", "science::bioinformatics"]
authors = ["Tim Anderson <tim.anderson@umontana.edu"]
edition = "2021"

[dependencies]
awry = "0.1.3"
